--- a/rjc_account_form/reports/billing_layout.xml
+++ b/rjc_account_form/reports/billing_layout.xml
@@ -64,7 +64,12 @@
                 </thead>
                 <tbody>
                     <tr t-foreach="o.invoice_ids" t-as="line">
-                        <td><span t-field="line.number_preprint"/></td>
+                        <t t-if="o.bill_type == 'out_invoice'">
+                            <td><span t-field="line.number_preprint"/></td>
+                        </t>
+                        <t t-if="o.bill_type == 'in_invoice'">
+                            <td><span t-field="line.reference"/></td>
+                        </t>
                         <td><span t-field="line.date_invoice"/></td>
                         <td><span t-field="line.date_due"/></td>
                         <td class="text-right"><span t-field="line.amount_total_signed"/></td>
