--- a/rjc_account_form/reports/payment_voucher_layout.xml
+++ b/rjc_account_form/reports/payment_voucher_layout.xml
@@ -129,23 +129,25 @@
                                 </td>
                             </tr>
                         </t>
-                        <!-- Tax Adjustment Case -->
+                        <!-- Tax Adjustment Case and Direct Payment difference-->
                         <t t-if="not o.expense_sheet_id and not o.reconciled_invoice_ids">
-                            <t t-set="move_id" t-value="o._get_move_line()"/>
-                            <tr t-if="move_id">
-                                <td>
-                                    <span t-esc="move_id.ref"/>
-                                </td>
-                                <td>
-                                    <span t-esc="move_id.narration"/>
-                                </td>
-                                <td>
-                                    <span t-esc="move_id.date"/>
-                                </td>
-                                <td class="text-right">
-                                    <span t-field="o.amount"/>
-                                </td>
-                            </tr>
+                            <t t-set="move_line" t-value="o._get_move_line()"/>
+                            <t t-foreach="move_line" t-as="line">
+                                <tr>
+                                    <td>
+                                        <span t-esc="line.move_id.ref"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="line.move_id.narration"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="line.move_id.date"/>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-field="line.move_id.amount"/>
+                                    </td>
+                                </tr>
+                            </t>
                         </t>
                     </tbody>
                     <tfoot>
