--- a/rjc_account_form/reports/receipt_voucher_layout.xml
+++ b/rjc_account_form/reports/receipt_voucher_layout.xml
@@ -58,6 +58,7 @@
                     <tbody>
                         <t t-set="column" t-value="0"/>
                         <t t-set="invoice_payment_total" t-value="0"/>
+                        <!-- Invoice Case -->
                         <t t-foreach="o.reconciled_invoice_ids" t-as="line">
                             <t t-set="column" t-value="column + 1"/>
                             <t t-set="type" t-value="'out_invoice'"/>
@@ -99,6 +100,31 @@
                                 </td>
                             </tr>
                         </t>
+                        <!-- Tax Adjustment Case, Direct Payment difference and Import-->
+                        <t t-if="not o.reconciled_invoice_ids">
+                            <t t-set="move_line" t-value="o._get_move_line()"/>
+                            <t t-foreach="move_line" t-as="line">
+                                <t t-set="column" t-value="column + 1"/>
+                                <tr>
+                                    <td>
+                                        <span t-esc="column"/>
+                                    </td>
+                                    <td>
+                                        <span t-field="line.date_maturity"/>
+                                    </td>
+                                    <td>
+                                        <span t-field="line.name"/>
+                                    </td>
+                                    <td/>
+                                    <td/>
+                                    <td/>
+                                    <td class="text-right">
+                                        <span t-field="line.balance" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                    </td>
+                                    <td/>
+                                </tr>
+                            </t>
+                        </t>
                     </tbody>
                     <tfoot>
                         <tr class="border-black">
@@ -107,7 +133,12 @@
                                 รวม
                             </td>
                             <td class="text-right">
-                                <span t-esc="invoice_payment_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                <t t-if="o.reconciled_invoice_ids">
+                                    <span t-esc="invoice_payment_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </t>
+                                <t t-else="">
+                                    <span t-esc="sum(move_line.mapped('balance'))" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </t>
                             </td>
                             <td/>
                         </tr>
