--- a/rjc_account_form/static/scss/style_account_report.scss
+++ b/rjc_account_form/static/scss/style_account_report.scss
@@ -207,6 +207,9 @@
                 }
             }
         }
+        .border-black-bottom {
+            border-top: 1px solid black !important;
+        }
     }
 }
 
