--- a/rjc_account_form/static/scss/style_account_report.scss
+++ b/rjc_account_form/static/scss/style_account_report.scss
@@ -190,6 +190,9 @@
         .line_dot {
             border-bottom:1px dotted #000;
         }
+        .border-black-bottom {
+            border-top: 1px solid black !important;
+        }
     }
 
     // style payment receipt
