--- a/rjc_account_form/static/scss/style_account_report.scss
+++ b/rjc_account_form/static/scss/style_account_report.scss
@@ -201,17 +201,16 @@
             thead {
                 background-color: whitesmoke;
             }
+            tbody {
+                tr td {
+                    border-bottom: 1px solid black !important;
+                }
+            }
             tfoot {
                 tr td {
                     border-top: none;
                 }
-                tr .border-black td {
-                    border-top: 1px solid black !important;
-                }
             }
-        }
-        .border-black-bottom {
-            border-top: 1px solid black !important;
         }
     }
 }
