--- a/rjc_hr_expense_form/static/scss/style_expense_report.scss
+++ b/rjc_hr_expense_form/static/scss/style_expense_report.scss
@@ -8,4 +8,7 @@
         content: attr(data-content);
         // border-bottom: 1px dotted black !important;
     }
+    .top_line {
+        border-top: 1px solid black !important;
+    }
 }
