--- a/rjc_account_form/reports/payment_voucher_layout.xml
+++ b/rjc_account_form/reports/payment_voucher_layout.xml
@@ -190,19 +190,19 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 horizontal_dotted_line" data-content="__________________">
+                    <div class="col-4 horizontal_dotted_line" data-content="____________">
                         <strong class="mr32">
                             ลายเซ็นผู้อนุมัติ <br/>
                             Authorized
                         </strong>
                     </div>
-                    <div class="col-4 horizontal_dotted_line" data-content="________________________">
+                    <div class="col-4 horizontal_dotted_line" data-content="__________________">
                         <strong class="mr8">
                             ผู้จ่ายเงิน <br/>
                             Paid by
                         </strong>
                     </div>
-                    <div class="col-4 horizontal_dotted_line" data-content="________________________">
+                    <div class="col-4 horizontal_dotted_line" data-content="__________________">
                         <strong>
                             ผู้รับเงิน <br/>
                             Received by
