[FIX] line date in payment form

--- a/rjc_account_form/reports/payment_voucher_layout.xml
+++ b/rjc_account_form/reports/payment_voucher_layout.xml
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 horizontal_dotted_line" data-content="____________">
+                    <div class="col-4 horizontal_dotted_line" data-content="______________">
                         <strong class="mr32">
                             ลายเซ็นผู้อนุมัติ <br/>
                             Authorized
@@ -210,17 +210,17 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-4 horizontal_dotted_line" data-content="_________/_________/____________">
+                    <div class="col-4 horizontal_dotted_line" data-content="________/________/________">
                         <strong>
                             วันที่
                         </strong>
                     </div>
-                    <div class="col-4 horizontal_dotted_line" data-content="_________/_________/____________">
+                    <div class="col-4 horizontal_dotted_line" data-content="________/________/________">
                         <strong>
                             วันที่
                         </strong>
                     </div>
-                    <div class="col-4 horizontal_dotted_line" data-content="_________/_________/____________">
+                    <div class="col-4 horizontal_dotted_line" data-content="________/________/________">
                         <strong>
                             วันที่
                         </strong>
